# rubric_gen

./: .gitignore  README.md  pyproject.toml  run_pipeline.py  stmt.txt
data/: judgebench_270_generated.json  judgebench_80_human.json  medical_gpt41_answers_rl_relabeled_phase1.jsonl  medical_gpt4o_b_regen_opus_judged.jsonl  medical_gpt5_a_vs_gpt41_b_opus_judged.jsonl  medical_gpt5_answers_rl.jsonl  medical_gpt5_answers_rl_opus_judged.jsonl  sample_30_aci_70_agbonnet.json
docs/: README.md
rubric_gen/: __init__.py  candidate_generation.py  cli.py  comparison_pipeline.py  config.py  dataio.py  llm_client.py  paper_pipeline.py  pipeline.py  storage.py  types.py
scripts/: analyze_pair_validation.py  build_medical_rubric_index.py  check_atcoder_runner.py  check_mmlu_answerer.py  diagnose_4k_validation.py  diagnose_shard0_training.py  diagnose_shard0_v2.py  diff_claude_vs_gpt_answerer.py  diff_mmlu_overrides.py  dump_run_table.py  estimate_rb2_cost.py  family_diff.py  inspect_filter_drops.py  inspect_gold_ranks.py  inspect_livecodebench.py  inspect_mmlu_misses.py  inspect_no_method.py  inspect_reasoning_candidates.py  inspect_reasoning_failures.py  inspect_relabel_samples.py  inspect_v45_mmlu_failures.py  package_medical_rubrics.py  partial_pair_score.py  rb2_inspect_candidates.py  rb2_inspect_discovery.py  rb2_inspect_pair.py  reaggregate_pair_validation.py  reasoning_solver_stats.py  regen_pair_response_b.py  regenerate_a_and_judge.py  relabel_pair_dataset.py  rescore_pair_artifacts.py  rescore_with_tiebreaker.py  slim_pair_dataset.py  smoke_leetcode_runner.py
(+146 files in other folders)
